--- a/astro/src/layouts/MarkdownPost.astro
+++ b/astro/src/layouts/MarkdownPost.astro
@@ -3,15 +3,22 @@ import Layout from '../layouts/Base.astro';
 
 interface Props {
 	title: string;
+  date: Date;
+  minutesRead: string,
 };
 
-const { title } = Astro.props;
+const { title, date, minutesRead } = Astro.props;
 ---
 
 <Layout title={title}>
     <article>
       <header>
         <h1>{title}</h1>
+        <div id="post-meta">
+          <time datetime={date.toUTCString()}>
+            {date.toLocaleDateString("en-US", { year: 'numeric', month: 'long', day: 'numeric' })}
+          </time> · {minutesRead}
+        </div>
       </header>
       <div id="post-body">
         <slot />
