--- a/astro/src/pages/reviews/[...slug].astro
+++ b/astro/src/pages/reviews/[...slug].astro
@@ -10,10 +10,10 @@ export async function getStaticPaths() {
 }
 
 const { entry } = Astro.props;
-const { Content } = await entry.render();
+const { Content, remarkPluginFrontmatter } = await entry.render();
 ---
 
-<MarkdownPost title={entry.data.title}>
+<MarkdownPost title={entry.data.title} date={entry.data.date} minutesRead={remarkPluginFrontmatter.minutesRead}>
   <Content />
 </MarkdownPost>
 
