--- a/astro/src/layouts/MarkdownPost.astro
+++ b/astro/src/layouts/MarkdownPost.astro
@@ -1,27 +1,34 @@
 ---
-import Layout from '../layouts/Base.astro';
+import Layout from "../layouts/Base.astro";
 
 interface Props {
-	title: string;
-  date: Date;
-  minutesRead: string,
-};
+  title: string;
+  date?: Date;
+  minutesRead?: string;
+}
 
 const { title, date, minutesRead } = Astro.props;
 ---
 
 <Layout title={title}>
-    <article>
-      <header>
-        <h1>{title}</h1>
-        <div id="post-meta">
-          <time datetime={date.toUTCString()}>
-            {date.toLocaleDateString("en-US", { year: 'numeric', month: 'long', day: 'numeric' })}
-          </time> · {minutesRead}
-        </div>
-      </header>
-      <div id="post-body">
-        <slot />
+  <article>
+    <header>
+      <h1>{title}</h1>
+      <div id="post-meta">
+        {date !== undefined && (
+        <time datetime={date.toUTCString()}>
+          {
+            date.toLocaleDateString("en-US", {
+              year: "numeric",
+              month: "long",
+              day: "numeric",
+            })
+          }
+        </time>)}{minutesRead !== undefined && ` · ${minutesRead}`}
       </div>
-    </article>
-  </Layout>
+    </header>
+    <div id="post-body">
+      <slot />
+    </div>
+  </article>
+</Layout>
