--- a/astro/src/components/Head.astro
+++ b/astro/src/components/Head.astro
@@ -1,4 +1,7 @@
 ---
+import '../css/style.css';
+import 'littlefoot/dist/littlefoot.css'
+
 interface Props {
 	title: string | undefined;
 }
@@ -38,8 +41,6 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 <link rel="me" href="https://github.com/marcus-crane" />
 <link rel="webmention" href="https://webmention.io/utf9k.net/webmention" />
 <link rel="pingback" href="https://webmention.io/utf9k.net/xmlrpc" />
-
-<link rel="stylesheet" href="https://unpkg.com/littlefoot@4.0.0-9/dist/littlefoot.css" />
 
 <script>
     import '../js/image-viewer'
