--- a/astro/src/pages/questions.astro
+++ b/astro/src/pages/questions.astro
@@ -6,7 +6,7 @@ import QuestionList from "../components/QuestionList.astro";
 const questions = await getCollection("questions");
 ---
 
-<BaseLayout title="Welcome to Astro.">
+<BaseLayout title="I have a few questions">
   <main>
     <header>
       <h1>Answers to questions I'll soon forget</h1>
