--- a/astro/src/layouts/GenericMarkdown.astro
+++ b/astro/src/layouts/GenericMarkdown.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from '../layouts/Base.astro';
+import Layout from "../layouts/Base.astro";
 
 interface Frontmatter {
   title: string;
-  description: string;
+  description?: string;
   category: string;
   tags: string[];
 }
@@ -15,13 +15,13 @@ interface Props {
 const { frontmatter } = Astro.props;
 ---
 
-<Layout title={frontmatter.title}>
-    <article>
-      <header>
-        <h1>{frontmatter.title}</h1>
-      </header>
-      <div id="post-body">
-        <slot />
-      </div>
-    </article>
-  </Layout>
+<Layout title={frontmatter.title} description={frontmatter.description}>
+  <article>
+    <header>
+      <h1>{frontmatter.title}</h1>
+    </header>
+    <div id="post-body">
+      <slot />
+    </div>
+  </article>
+</Layout>
