--- a/astro/src/pages/blog/[...slug].astro
+++ b/astro/src/pages/blog/[...slug].astro
@@ -11,8 +11,11 @@ export async function getStaticPaths() {
 
 const { entry } = Astro.props;
 const { Content, remarkPluginFrontmatter } = await entry.render();
+
+const { title, description, date } = entry.data;
+const { minutesRead } = remarkPluginFrontmatter;
 ---
 
-<MarkdownPost title={entry.data.title} date={entry.data.date} minutesRead={remarkPluginFrontmatter.minutesRead}>
+<MarkdownPost title={title} description={description} date={date} minutesRead={minutesRead}>
   <Content />
 </MarkdownPost>
