--- a/astro/src/pages/books.astro
+++ b/astro/src/pages/books.astro
@@ -1,11 +1,69 @@
 ---
-import { getCollection } from "astro:content";
 import BaseLayout from "../layouts/Base.astro";
-import ProjectList from "../components/ProjectList.astro";
 
-const projects = await getCollection("projects");
+import type { BookList } from "../schemas/books";
+
+import books from "../data/books.yml";
+
+const typedBooks = books as BookList[];
 ---
 
-<BaseLayout title="Books" description="Find out what books I have been reading lately">
-    <p>Hi</p>
+<BaseLayout
+  title="Books"
+  description="Find out what books I have been reading lately"
+>
+  <article>
+    <header>
+      <h1>Books</h1>
+    </header>
+    <div id="post-body">
+      {
+        typedBooks.map((yearGroup) => {
+          const goalProgress = yearGroup.books.filter(
+            (b) => b.progress === 100,
+          ).length;
+          const goalCompletion = (goalProgress * 100) / yearGroup.goal;
+          return (
+            <div class="grid-list">
+              <div>
+                <h2>{yearGroup.list}</h2>
+                {yearGroup.goal && (
+                  <span>
+                    Yearly goal: {goalProgress} / {yearGroup.goal} books
+                    completed ({Math.round(goalCompletion)}%)
+                  </span>
+                )}
+              </div>
+              <ul role="list">
+                {yearGroup.books.map((b) => (
+                  <li>
+                    <div>
+                      <img
+                        alt={`A cover photo of the book titled ${b.title}`}
+                        src={b.cover}
+                      />
+                      <a href={b.link} target="_blank" rel="noopener noreferer">
+                        <span>{b.title}</span>
+                      </a>
+                    </div>
+                    <dl>
+                      {b.progress === 100 && b.rating !== null && (
+                        <div>
+                          <dd>Finished: {b.date_finished?.toISOString().split("T")[0]}</dd>
+                          <dd>Rating: {'★'.repeat(b.rating)}</dd>
+                        </div>
+                      )}
+                      {b.progress !== 100 && (
+                        <p>{b.progress}% read</p>
+                      )}
+                    </dl>
+                  </li>
+                ))}
+              </ul>
+            </div>
+          );
+        })
+      }
+    </div>
+  </article>
 </BaseLayout>
