--- a/astro/src/pages/games.astro
+++ b/astro/src/pages/games.astro
@@ -9,12 +9,12 @@ const typedGames = games as GameList[];
 ---
 
 <BaseLayout
-  title="Games"
-  description="Find out what books I have been reading lately"
+  title="Videogames"
+  description="Check out what games I have been playing in recent times"
 >
   <article>
     <header>
-      <h1>Games</h1>
+      <h1>Videogames</h1>
     </header>
     <div id="post-body">
       {
