--- a/astro/src/pages/projects.astro
+++ b/astro/src/pages/projects.astro
@@ -6,7 +6,7 @@ import ProjectList from "../components/ProjectList.astro";
 const projects = await getCollection("projects");
 ---
 
-<BaseLayout title="Welcome to Astro.">
+<BaseLayout title="Projects" description="Check out a handful of side projects that I'm quite proud of">
   <main>
     <header>
       <h1>Projects</h1>
