--- a/astro/src/pages/questions.astro
+++ b/astro/src/pages/questions.astro
@@ -6,7 +6,7 @@ import QuestionList from "../components/QuestionList.astro";
 const questions = await getCollection("questions");
 ---
 
-<BaseLayout title="I have a few questions">
+<BaseLayout title="Questions" description="From time to time, I'll discover something I want to remember and jot it down here">
   <main>
     <header>
       <h1>Answers to questions I'll soon forget</h1>
