--- a/astro/src/pages/reviews.astro
+++ b/astro/src/pages/reviews.astro
@@ -6,7 +6,7 @@ import ReviewList from "../components/ReviewList.astro";
 const reviews = await getCollection("reviews");
 ---
 
-<BaseLayout title="Welcome to Astro.">
+<BaseLayout title="Reviews" description="Years ago, I used to write game reviews as a personal hobby. That website no longer exists but I've archived them to reflect my writing progression over time.">
   <main>
     <header>
       <h1>Reviews</h1>
