--- a/lume/css/style.css
+++ b/lume/css/style.css
@@ -570,6 +570,20 @@ iframe {
   }
 }
 
+@media (prefers-color-scheme: dark) {
+  pre[data-theme='light'],
+  code[data-theme='light'] {
+    display: none;
+  }
+}
+
+@media (prefers-color-scheme: light), (prefers-color-scheme: no-preference) {
+  pre[data-theme='dark'],
+  code[data-theme='dark'] {
+    display: none;
+  }
+}
+
 #post-body img {
   height: auto;
   max-width: none;
