--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 
 * {
   margin: 0;
+  box-sizing: border-box;
 }
 
 :root {
@@ -41,6 +42,7 @@ body {
   line-height: 1.5;
   background: var(--bg-light);
   color: var(--text-dark);
+  background-attachment: fixed;
 }
 
 #content {
@@ -797,5 +799,78 @@ footer {
 
   100% {
       opacity: 0
+  }
+}
+
+/** Live Player v2 **/
+.sun-hidden {
+  opacity: 0% !important;
+}
+
+#sun {
+  width: 100rem;
+  height: 100rem;
+  position: absolute;
+  transition-duration: 1s;
+  -webkit-mask-image: radial-gradient(rgba(0, 0, 0, 1.0) 45%, transparent 85%);
+  mask-image: radial-gradient(rgba(0, 0, 0, 1.0) 45%, transparent 85%);
+  border-radius: 50%;
+  opacity: 30%;
+  /* top: -35rem;
+  left: 50rem; */
+  animation: scale 30s linear infinite;
+
+  &::after,
+  &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transform-origin: center;
+      border-radius: 50%;
+      -webkit-mask-image: radial-gradient(rgba(0, 0, 0, 1.0) 15%, transparent 65%);
+      mask-image: radial-gradient(rgba(0, 0, 0, 1.0) 15%, transparent 65%);
+      
+  }
+
+  &::after {
+      background: var(--border-bg);
+      transition-duration: 3s;
+      transform: rotate(15deg);
+      animation: rotate 120s linear infinite;
+  }
+}
+
+@keyframes rotate {
+  100% {
+      transform: rotate(360deg);
+  }
+}
+
+@keyframes scale {
+  0% {
+      transform: scale(1);
+  }
+
+  20% {
+      transform: scale(1.2);
+  }
+
+  40% {
+      transform: scale(0.8);
+  }
+
+  60% {
+      transform: scale(1.1);
+  }
+
+  70% {
+      transform: scale(0.9);
+  }
+
+  100% {
+      transform: scale(1);
   }
 }
