--- a/css/style.css
+++ b/css/style.css
@@ -808,39 +808,39 @@ footer {
 }
 
 #sun {
+  z-index: -999;
   width: 100rem;
   height: 100rem;
   position: absolute;
+  margin: -50rem;
   transition-duration: 1s;
   -webkit-mask-image: radial-gradient(rgba(0, 0, 0, 1.0) 45%, transparent 85%);
   mask-image: radial-gradient(rgba(0, 0, 0, 1.0) 45%, transparent 85%);
   border-radius: 50%;
-  opacity: 30%;
-  /* top: -35rem;
-  left: 50rem; */
+  opacity: 25%;
   animation: scale 30s linear infinite;
+}
 
-  &::after,
-  &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      transform-origin: center;
-      border-radius: 50%;
-      -webkit-mask-image: radial-gradient(rgba(0, 0, 0, 1.0) 15%, transparent 65%);
-      mask-image: radial-gradient(rgba(0, 0, 0, 1.0) 15%, transparent 65%);
-      
-  }
+#sun::after,
+#sun::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-origin: center;
+    border-radius: 50%;
+    -webkit-mask-image: radial-gradient(rgba(0, 0, 0, 1.0) 15%, transparent 65%);
+    mask-image: radial-gradient(rgba(0, 0, 0, 1.0) 15%, transparent 65%);
+    
+}
 
-  &::after {
-      background: var(--border-bg);
-      transition-duration: 3s;
-      transform: rotate(15deg);
-      animation: rotate 120s linear infinite;
-  }
+#sun::after {
+    background: var(--border-bg);
+    transition-duration: 3s;
+    transform: rotate(15deg);
+    animation: rotate 120s linear infinite;
 }
 
 @keyframes rotate {
