--- a/_astro/src/pages/blog.astro
+++ b/_astro/src/pages/blog.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from "astro:content";
-import BaseLayout from "../layouts/Base.astro";
+import BaseLayout from "../layouts/Core.astro";
 import Posts from "../components/PostList.astro";
 
 const posts = await getCollection("blog");
