--- a/_astro/src/pages/games.astro
+++ b/_astro/src/pages/games.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from "../layouts/Base.astro";
+import BaseLayout from "../layouts/Core.astro";
 
 import type { GameList } from "../schemas/games";
 
