--- a/_astro/src/pages/questions.astro
+++ b/_astro/src/pages/questions.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from "astro:content";
-import BaseLayout from "../layouts/Base.astro";
+import BaseLayout from "../layouts/Core.astro";
 import QuestionList from "../components/QuestionList.astro";
 
 const questions = await getCollection("questions");
