--- a/_astro/src/pages/books.astro
+++ b/_astro/src/pages/books.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from "../layouts/Base.astro";
+import BaseLayout from "../layouts/Core.astro";
 
 import type { BookList } from "../schemas/books";
 
