--- a/_astro/src/pages/projects.astro
+++ b/_astro/src/pages/projects.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from "astro:content";
-import BaseLayout from "../layouts/Base.astro";
+import BaseLayout from "../layouts/Core.astro";
 import ProjectList from "../components/ProjectList.astro";
 
 const projects = await getCollection("projects");
