--- a/_astro/src/pages/reviews.astro
+++ b/_astro/src/pages/reviews.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from "astro:content";
-import BaseLayout from "../layouts/Base.astro";
+import BaseLayout from "../layouts/Core.astro";
 import ReviewList from "../components/ReviewList.astro";
 
 const reviews = await getCollection("reviews");
