Fix up various things
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/_astro/src/components/Nav.astro
+++ b/_astro/src/components/Nav.astro
@@ -2,10 +2,12 @@
 ---
 
 <header class="navigation">
-  <a href="/" id="logo">
-    <img src="/favicon.png" alt="utf9k" width="16px" height="16px" />
-    <span>utf9k</span>
-  </a>
+  <div id="logo">
+    <a href="/">
+      <img src="/favicon.png" alt="utf9k" width="16px" height="16px" />
+      <span>utf9k</span>
+    </a>
+  </div>
   <nav>
     <li><a href="/blog/">Blog</a></li>
     <span>//</span>
