Converted posts over to MDX
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/_astro/src/pages/debug/build-information.astro
+++ b/_astro/src/pages/debug/build-information.astro
@@ -17,7 +17,7 @@ const allQuestions = await getCollection("questions")
     <header>
       <h1>Build information</h1>
     </header>
-    <p>Sometimes it’s handy to check when my site was last built, and with what variables especially if I’m transitioning things behind the scenes such as DNS records or static hosting.</p>
+    <p>Sometimes it's handy to check when my site was last built, and with what variables especially if I'm transitioning things behind the scenes such as DNS records or static hosting.</p>
     <br />
     <div id="post-body">
       <table>
