--- a/_astro/src/pages/index.astro
+++ b/_astro/src/pages/index.astro
@@ -37,7 +37,7 @@ const rssPosts = isProduction ? await Astro.glob('../content/blog/**/*.mdx') : [
               <h1>Welcome!</h1>
             </header>
             <p>
-              My name is <a href="/about/">Marcus Crane</a> and you’re currently
+              My name is <a href="/about/">Marcus Crane</a> and you're currently
               logged on to my personal website.
             </p>
             <p>
