Update some more pages
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/_astro/src/pages/index.astro
+++ b/_astro/src/pages/index.astro
@@ -25,7 +25,7 @@ const isProduction = process.env.NODE_ENV === 'production'
 const rssPosts = isProduction ? await Astro.glob('../content/blog/**/*.mdx') : [];
 ---
 
-<BaseLayout title="Welcome to Astro." bodystyle="overflow-x: hidden;">
+<BaseLayout bodystyle="overflow-x: hidden;">
   <div id="sun"></div>
   <Nav />
   <div id="content">
