--- a/_astro/src/layouts/Core.astro
+++ b/_astro/src/layouts/Core.astro
@@ -4,7 +4,7 @@ import Layout from "./Base.astro";
 import Nav from "../components/Nav.astro";
 
 interface Props {
-  title: string;
+  title?: string;
   description?: string;
 }
 
