--- a/_astro/src/pages/books.astro
+++ b/_astro/src/pages/books.astro
@@ -16,6 +16,15 @@ const typedBooks = books as BookList[];
     <header>
       <h1>Books</h1>
     </header>
+    <div class="notice">
+      <hr class="hidden" />
+      <h3>
+        <span>📚</span>
+        How the rating system works
+      </h3>
+      <p>If a book has the loudspeaker emoji <span>(📣)</span>, it means that I found it interesting/enjoyable/compelling enough to bring it up in a discussion without being prompted.</p>
+      <hr class="hidden" />
+    </div>
     <div id="post-body">
       {
         typedBooks.map((yearGroup) => {
@@ -46,10 +55,12 @@ const typedBooks = books as BookList[];
                       </a>
                     </div>
                     <dl>
-                      {b.progress === 100 && b.rating !== null && (
+                      {b.progress === 100 && (
                         <div>
-                          <dd>Finished: {b.date_finished?.toISOString().split("T")[0]}</dd>
-                          <dd>Rating: {'★'.repeat(b.rating)}</dd>
+                          <dd>
+                            {b.date_finished?.toISOString().split("T")[0]}
+                            {b.recommended && <span>📣</span>}
+                          </dd>
                         </div>
                       )}
                       {b.progress !== 100 && (
