Extend RSS feed a bit
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/src/components/RssXml.astro
+++ b/src/components/RssXml.astro
@@ -17,7 +17,10 @@ const rssHeaderXml = `<?xml version="1.0" encoding="UTF-8"?>
   <channel>
     <title>${SITE_TITLE}</title>
     <description><![CDATA[ ${SITE_DESCRIPTION} ]]></description>
-    <link>${SITE_URL}</link>`;
+    <link>${SITE_URL}</link>
+    <managingEditor>marcus@utf9k.net (Marcus Crane)</managingEditor>
+    <webMaster>marcus@utf9k.net (Marcus Crane)</webMaster>
+    <docs>https://www.rssboard.org/rss-specification</docs>`;
 
 const rssFooterXml = `  </channel>
   </rss>
